kubernetes/apps/default/atuin/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: atuin
spec:
  hostnames:
    - "sh.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: atuin
          namespace: default
          port: ${ APP_PORT }
